# altschool_second_semester_exam

./: README.md  database.db  populate_db.py  pyproject.toml
app/: database.py  main.py  models.py
app/config/: database.py  settings.py
app/routes/: event.py  registration.py  speaker.py  user.py
app/schemas/: event.py  speaker.py  user.py
app/services/: event.py  speaker.py  user.py
migrations/: env.py
migrations/versions/: 0c54477d8dec_init_migration.py
